Örsmá tweaks, væntanlega fattaði ég meira eftir git add

--- a/gjafalisti.html
+++ b/gjafalisti.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <h1>Jólagjafalisti Elfars</h1>
-  <h3>Áhugamál</h3>
+  <!-- <h3>Áhugamál</h3> -->
+  <div class="centered-list">
   <ul id="folf">
-    <h5>Folf</h5>
+    <h5>Folf allskonar</h5>
     <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red">Taska</a></li>
     <li><a href="https://hobbyogsport.is/products/active-sensei">Putter</a></li>
     <li><a href="https://hobbyogsport.is/products/sense-orbit-hope-1?variant=44690863685883">Putter 2</a></li>
@@ -18,7 +19,8 @@
     <li><a href="https://hobbyogsport.is/products/active-magician">Fairway</a></li>
     <li><a href="https://hobbyogsport.is/products/lucid-captain">Distance</a></li>
   </ul>
-
+  </div>
+  <div class="centered-list">
   <ul id="tech">
     <h5>Leikir og bækur o.fl.</h5>
     <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI">Final Fantasy I-VI</a></li>
@@ -30,6 +32,8 @@
     <li><a href=""></a></li>
     <li><a href=""></a></li>
   </ul>
+  </div>
+  <div class="centered-list">
   <ul id="home">
     <h3>Heimilis og/eða praktískt</h3>
     <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281">Stofumotta</a></li>
@@ -45,8 +49,11 @@
     <li><a href=""></a></li>
     <li><a href=""></a></li>
   </ul>
+  </div>
+  <div class="centered-list">
   <ul id="sticker">
-  <h3>Límmiðar</h3>
+  <!-- <h3>Límmiðar</h3> -->
+  <h5>Fyrir vatnsbrúsa og fartölvu</h5>
     <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola límmiði</a></li>
     <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5">Astra límmiði</a></li>
     <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car límmiði</a></li>
@@ -54,5 +61,6 @@
     <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5">FBC límmiði</a></li>
     <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs límmiði</a></li>
   </ul>
+  </div>
 </body>
 </html>
