--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5">FBC </a></li>
         </div>
         <div class="card">
-          <p>Nerd culture</p>
+          <p>Pop culture</p>
           <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li>
           <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li>
           <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs </a></li>
