--- a/folf.html
+++ b/folf.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <meta charset="UTF-8" />
+      <link rel="stylesheet" href="gjafalisti.css">
       <title>Folf</title>
   </head>
   <body>
