Setti allt NONindex í sér möppu, bjó til nýja fyrir föt sem ég á eftir að fylla í og linka, breytti svo hverjum lista þannig að hver listi beinir á alla aðra lista en sýnir bara efni síns eigin lista.

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -2,10 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="gjafalisti.css">
+    <link rel="stylesheet" href="../gjafalisti.css">
     <title>Leikir og bækur</title>
   </head>
   <body>
+    <div class="backtoindex">
+      <a href="../index.html">Aftur í forvara</a>
+    </div>
+    <div class="cards">
+      <nav>
+        <div class="navcard">
+          <a href="/pages/folf.html">Folf</a>
+        </div>
+      </nav>
+    </div>
     <div class="card-container">
       <div class="centered-list">
         <ul id="tech">
@@ -30,11 +40,18 @@
               <li><a href=""> </a></li>
             </div>
           </div>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
         </ul>
       </div>
+    </div>
+    <div class="cards">
+      <nav>
+        <div class="navcard">
+          <a href="/pages/practical.html">Praktískt heima</a>
+        </div>
+        <div class="navcard">
+          <a href="/pages/stickers.html">Límmiðar</a>
+        </div>
+      </nav>
     </div>
   </body>
 </html>
