--- a/pages/practical.html
+++ b/pages/practical.html
@@ -2,10 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="gjafalisti.css">
+    <link rel="stylesheet" href="../gjafalisti.css">
     <title>Praktískt</title>
   </head>
   <body>
+    <div class="backtoindex">
+      <a href="../index.html">Aftur í forvara</a>
+    </div>
+    <div class="cards">
+      <nav>
+        <div class="navcard">
+          <a href="/pages/folf.html">Folf</a>
+        </div>
+        <div class="navcard">
+          <a href="/pages/gamesbooks.html">Leikir og bækur</a>
+        </div>
+      </nav>
+    </div>
     <div class="card-container">
       <div class="centered-list">
         <ul id="home">
@@ -27,13 +40,15 @@
               <li><a href=""></a></li>
             </div>
           </div>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
         </ul>
       </div>
+    </div>
+    <div class="cards">
+      <nav>
+        <div class="navcard">
+          <a href="/pages/stickers.html">Límmiðar</a>
+        </div>
+      </nav>
     </div>
   </body>
 </html>
