--- a/index.html
+++ b/index.html
@@ -1,120 +1,157 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="gjafalisti.css">
-  <title>Gjafalisti Elf</title>
-</head>
-<body>
-  <h1>Jóla- og afmælisgjafalisti Elfars</h1>
-  <div class="card-container">
-    <div class="centered-list">
-      <ul id="folf">
-        <h5>Folf allskonar</h5>
-        <div class="cards">
-        <div class="card">
-        <p>(Mikilvægir)Aukahlutir</p>
-          <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red">Taska</a></li>
-          <li><a href="https://elko.is/vorur/frisbee-golf-veidistong-290365/AHA07012">Diskaveiðistöng</a></li>
-        </div>
-        <div class="card">
-          <p>Pútterar</p>
-          <li><a href="https://hobbyogsport.is/products/active-sensei">Sensei</a></li>
-          <li><a href="https://hobbyogsport.is/products/sense-orbit-hope-1?variant=44690863685883">Sense Orbit Hope</a></li>
-        </div>
-        <div class="card">
-        <p>Midway</p>
-          <li><a href="https://hobbyogsport.is/products/lucid-justice">Lucid Justice</a></li>
-          <li><a href="https://www.folfdiskar.is/product/axiom-eclipse-glow-hex/">Axiom Hex</a></li>
-        </div>
-        <div class="card">
-        <p>Drivers</p>
-          <li><a href="https://hobbyogsport.is/products/active-magician">Active Magician</a></li>
-          <li><a href="https://hobbyogsport.is/products/lucid-captain">Lucid Captain</a></li>
-        </div>
-      </div>
-      </ul>
-    </div>
-  </div>
-  <div class="card-container">
-    <div class="centered-list">
-      <ul id="tech">
-        <h5>Leikir og bækur o.fl.</h5>
-        <div class="cards">
-          <div class="card">
-            <p>Leikja</p>
-            <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI">Final Fantasy I-VI</a></li>
-            <li><a href="https://elko.is/vorur/steam-deck-oled-1-tb-leikjatolva-344000/STEAMDECKOLED1000">Steam Deck OLED 1TB</a></li>
-            <li><a href="https://elko.is/vorur/nintendo-pro-thradlaus-styripinni-svartur-82422/SWIPROWLCONTR">Nintendo Switch fjarstýring</a></li>
-          </div>
-          <div class="card">
-            <p>Bækur</p>
-            <li><a href="https://www.amazon.com/Have-No-Mouth-Must-Scream/dp/1497643074#customerReviews">7 bækur í einu</a></li>
-            <li><a href="https://www.amazon.com/dp/B09X1XXSS2/?coliid=I27VOBDQQ6KT4P&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Lego BD-1</a></li>
-            <li><a href="https://www.amazon.com/Returnal-Fallen-Asteria-Gregory-Louden/dp/1506742378">Góð bók</a></li>
-          </div>
-          <div class="card">
-            <p>Spil</p>
-            <li><a href=""> </a></li>
-            <li><a href=""> </a></li>
-            <li><a href=""> </a></li>
-          </div>
-        </div>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="card-container">
-    <div class="centered-list">
-      <ul id="home">
-        <h5>Heimilis og/eða praktískt</h5>
-        <div class="cards">
-          <div class="card">
-            <p>Engir</p>
-            <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281">Stofumotta</a></li>
-            <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da">Skrifborð</a></li>
-          </div>
-          <div class="card">
-            <p>Undirflokkar</p>
-            <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT">Ný ryksuga, loksins</a></li>
-            <li><a href="https://www.manscaped.com/products/the-scalp-buffer">Sjampónuddari?</a></li>
-          </div>
-          <div class="card">
-            <p>Svosem</p>
-            <li><a href="https://www.amazon.com/dp/B094YDJPX9/?coliid=I2TX8R7MGQNJNP&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Grip trainer</a></li>
-            <li><a href=""></a></li>
-          </div>
-        </div>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="card-container">
-    <div class="centered-list">
-      <ul id="sticker">
-      <h5>Límmiðar fyrir vatnsbrúsa og fartölvu</h5>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="gjafalisti.css">
+    <title>Gjafalisti Elf</title>
+  </head>
+  <body>
+    <div class="wrapper">
+    <h1>Jóla- og afmælisgjafalisti Elfars</h1>
+    <div class="forvari">
+      <p>
+        Laufléttur formáli: <br><br>
+        Sumt á þessum listum endar á Amazon, o.þ.h.<br>
+        en ef þið vitið af einhverju svipuðu(helst nákvæmlega eins)<br>
+        og það er fáanlegt útí búð þá kaupiði það að sjálfsögðu þar til að einfalda öll skref.<br>
+        Einnig er ekkert möst að kaupa allt af þessum lista fyrir afmæli eða jól, ég uppfæri bara árlega í gegnum árið og árin<br>
+      </p>
       <div class="cards">
-        <div class="card">
-          <p>Nerd culture</p>
-          <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li>
-          <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5">Astra</a></li>
-          <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5">FBC </a></li>
-        </div>
-        <div class="card">
-          <p>Pop culture</p>
-          <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li>
-          <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li>
-          <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs </a></li>
-        </div>
-      </ul>
-    </div>
+        <nav>
+          <ul>
+          <li>
+            <div class="navcard">
+              <a href="/pages/folf.html">Folf</a>
+            </div>
+          </li>
+          <li>
+            <div class="navcard">
+              <a href="/pages/gamesbooks.html">Leikir og bækur</a>
+            </div>
+          </li>
+          <li>
+            <div class="navcard">
+              <a href="/pages/practical.html">Praktískt heima</a>
+            </div>
+          </li>
+          <li>
+            <div class="navcard">
+              <a href="/pages/stickers.html">Límmiðar</a>
+            </div>
+          </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </div>
-</body>
+    <!-- <div class="card-container">
+      <div class="centered-list">
+        <ul id="folf">
+          <h5>Folf allskonar</h5>
+          <div class="cards">
+          <div class="card">
+          <p>(Mikilvægir)Aukahlutir</p>
+            <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red">Taska</a></li>
+            <li><a href="https://elko.is/vorur/frisbee-golf-veidistong-290365/AHA07012">Diskaveiðistöng</a></li>
+          </div>
+          <div class="card">
+            <p>Pútterar</p>
+            <li><a href="https://hobbyogsport.is/products/active-sensei">Sensei</a></li>
+            <li><a href="https://hobbyogsport.is/products/sense-orbit-hope-1?variant=44690863685883">Sense Orbit Hope</a></li>
+          </div>
+          <div class="card">
+          <p>Midway</p>
+            <li><a href="https://hobbyogsport.is/products/lucid-justice">Lucid Justice</a></li>
+            <li><a href="https://www.folfdiskar.is/product/axiom-eclipse-glow-hex/">Axiom Hex</a></li>
+          </div>
+          <div class="card">
+          <p>Drivers</p>
+            <li><a href="https://hobbyogsport.is/products/active-magician">Active Magician</a></li>
+            <li><a href="https://hobbyogsport.is/products/lucid-captain">Lucid Captain</a></li>
+          </div>
+        </div>
+        </ul>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="centered-list">
+        <ul id="tech">
+          <h5>Leikir og bækur o.fl.</h5>
+          <div class="cards">
+            <div class="card">
+              <p>Leikja</p>
+              <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI">Final Fantasy I-VI</a></li>
+              <li><a href="https://elko.is/vorur/steam-deck-oled-1-tb-leikjatolva-344000/STEAMDECKOLED1000">Steam Deck OLED 1TB</a></li>
+              <li><a href="https://elko.is/vorur/nintendo-pro-thradlaus-styripinni-svartur-82422/SWIPROWLCONTR">Nintendo Switch fjarstýring</a></li>
+            </div>
+            <div class="card">
+              <p>Bækur</p>
+              <li><a href="https://www.amazon.com/Have-No-Mouth-Must-Scream/dp/1497643074#customerReviews">7 bækur í einu</a></li>
+              <li><a href="https://www.amazon.com/dp/B09X1XXSS2/?coliid=I27VOBDQQ6KT4P&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Lego BD-1</a></li>
+              <li><a href="https://www.amazon.com/Returnal-Fallen-Asteria-Gregory-Louden/dp/1506742378">Góð bók</a></li>
+            </div>
+            <div class="card">
+              <p>Spil</p>
+              <li><a href=""> </a></li>
+              <li><a href=""> </a></li>
+              <li><a href=""> </a></li>
+            </div>
+          </div>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="centered-list">
+        <ul id="home">
+          <h5>Heimilis og/eða praktískt</h5>
+          <div class="cards">
+            <div class="card">
+              <p>Engir</p>
+              <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281">Stofumotta</a></li>
+              <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da">Skrifborð</a></li>
+            </div>
+            <div class="card">
+              <p>Undirflokkar</p>
+              <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT">Ný ryksuga, loksins</a></li>
+              <li><a href="https://www.manscaped.com/products/the-scalp-buffer">Sjampónuddari?</a></li>
+            </div>
+            <div class="card">
+              <p>Svosem</p>
+              <li><a href="https://www.amazon.com/dp/B094YDJPX9/?coliid=I2TX8R7MGQNJNP&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Grip trainer</a></li>
+              <li><a href=""></a></li>
+            </div>
+          </div>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="centered-list">
+        <ul id="sticker">
+        <h5>Límmiðar fyrir vatnsbrúsa og fartölvu</h5>
+        <div class="cards">
+          <div class="card">
+            <p>Nerd culture</p>
+            <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5">Astra</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5">FBC </a></li>
+          </div>
+          <div class="card">
+            <p>Pop culture</p>
+            <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs </a></li>
+          </div>
+        </ul>
+      </div>
+      </div>
+    </div> -->
+  </body>
 </html>
