--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="gjafalisti.css">
-  <title>Límmiðar</title>
-</head>
-  <body>
-    <div class="card-container">
+<div class="card-container">
       <div class="centered-list">
         <ul id="sticker">
-        <h5>Límmiðar fyrir vatnsbrúsa og fartölvu</h5>
+        <h5>Fatnaður</h5>
         <div class="cards">
           <div class="card">
-            <p>Nerd culture</p>
-            <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5">Astra</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5">FBC </a></li>
+            <p>Bolir</p>
+            <p>Engir hlekkir hér því miður, bara lýsingar</p>
+            <li><a href=""> </a></li>
+            <li><a href=""> </a></li>
+            <li><a href=""> </a></li>
           </div>
           <div class="card">
             <p>Pop culture</p>
@@ -26,5 +19,3 @@
         </ul>
       </div>
     </div>
-  </body>
-</html>
