--- a/pages/folf.html
+++ b/pages/folf.html
@@ -2,10 +2,13 @@
 <html>
   <head>
       <meta charset="UTF-8" />
-      <link rel="stylesheet" href="gjafalisti.css">
+      <link rel="stylesheet" href="../gjafalisti.css">
       <title>Folf</title>
   </head>
   <body>
+    <div class="backtoindex">
+      <a href="../index.html">Aftur í forvara</a>
+    </div>
     <div class="card-container">
       <div class="centered-list">
         <ul id="folf">
@@ -34,6 +37,19 @@
           </div>
         </ul>
       </div>
+    </div>
+    <div class="cards">
+      <nav>
+        <div class="navcard">
+          <a href="/pages/gamesbooks.html">Leikir og bækur</a>
+        </div>
+        <div class="navcard">
+          <a href="/pages/practical.html">Praktískt heima</a>
+        </div>
+        <div class="navcard">
+          <a href="/pages/stickers.html">Límmiðar</a>
+        </div>
+      </nav>
     </div>
   </body>
 </html>
