Tók einnig heildarlistann úr index þar sem ég er búinn að splitta og breytti Spil í Borðspil

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -34,7 +34,7 @@
               <li><a href="https://www.amazon.com/Returnal-Fallen-Asteria-Gregory-Louden/dp/1506742378">Góð bók</a></li>
             </div>
             <div class="card">
-              <p>Spil</p>
+              <p>Borðspil</p>
               <li><a href=""> </a></li>
               <li><a href=""> </a></li>
               <li><a href=""> </a></li>
