Bætti við mánaðarskipulagi í practical. Bætti við fatnadur.html í listann, á eftir að laga litinn á Föt

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -1,21 +1,60 @@
-<div class="card-container">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../gjafalisti.css">
+    <title>Föt</title>
+  </head>
+  <body>
+    <div class="backtoindex">
+      <a href="../index.html">Aftur í forvara</a>
+    </div>
+    <div class="card-container">
       <div class="centered-list">
-        <ul id="sticker">
-        <h5>Fatnaður</h5>
+        <ul id="fatnadur">
+        <h5>Föt</h5>
         <div class="cards">
           <div class="card">
-            <p>Bolir</p>
             <p>Engir hlekkir hér því miður, bara lýsingar</p>
-            <li><a href=""> </a></li>
-            <li><a href=""> </a></li>
-            <li><a href=""> </a></li>
+            <li>Þunnan síðerma bol, hvaða lit sem er</li>
+            <li>Nærbuxur, boxer briefs(því litríkara því betra)</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
           </div>
-          <div class="card">
+          <!-- <div class="card">
             <p>Pop culture</p>
             <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li>
             <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs </a></li>
+          </div> -->
           </div>
         </ul>
       </div>
     </div>
+    <div class="cards">
+      <nav>
+        <div class="navcard">
+          <a href="/pages/folf.html">Folf</a>
+        </div>
+        <div class="navcard">
+          <a href="/pages/gamesbooks.html">Leikir og bækur</a>
+        </div>
+        <div class="navcard">
+          <a href="/pages/practical.html">Praktískt heima</a>
+        </div>
+        <div class="navcard">
+          <a href="/pages/stickers.html">Límmiðar</a>
+        </div>
+      </nav>
+    </div>
+  </body>
+</html>
