--- a/pages/folf.html
+++ b/pages/folf.html
@@ -9,6 +9,13 @@
     <div class="backtoindex">
       <a href="../index.html">Aftur í forvara</a>
     </div>
+    <div class="cards">
+      <nav>
+        <div class="navcard">
+          <a href="/pages/fatnadur.html">Föt</a>
+        </div>
+      </nav>
+    </div>
     <div class="card-container">
       <div class="centered-list">
         <ul id="folf">
