--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -12,6 +12,9 @@
     <div class="cards">
       <nav>
         <div class="navcard">
+          <a href="/pages/fatnadur.html">Föt</a>
+        </div>
+        <div class="navcard">
           <a href="/pages/folf.html">Folf</a>
         </div>
       </nav>
