--- a/pages/practical.html
+++ b/pages/practical.html
@@ -12,6 +12,9 @@
     <div class="cards">
       <nav>
         <div class="navcard">
+          <a href="/pages/fatnadur.html">Föt</a>
+        </div>
+        <div class="navcard">
           <a href="/pages/folf.html">Folf</a>
         </div>
         <div class="navcard">
@@ -37,7 +40,7 @@
             <div class="card">
               <p>Svosem</p>
               <li><a href="https://www.amazon.com/dp/B094YDJPX9/?coliid=I2TX8R7MGQNJNP&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Grip trainer</a></li>
-              <li><a href=""></a></li>
+              <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
             </div>
           </div>
         </ul>
