Breytti bolunum í fleirtölu því ég vil fleiri en einn, hehe

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -16,7 +16,7 @@
         <div class="cards">
           <div class="card">
             <p>Engir hlekkir hér því miður, bara lýsingar</p>
-            <li>Þunnan síðerma bol, hvaða lit sem er</li>
+            <li>Þunna síðerma boli, hvaða lit sem er</li>
             <li>Nærbuxur, boxer briefs(því litríkara því betra)</li>
             <li></li>
             <li></li>
