Fann hársvarðarbursta á íslenskri síðu

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -35,7 +35,7 @@
             <div class="card">
               <p>Undirflokkar</p>
               <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT">Ný ryksuga, loksins</a></li>
-              <li><a href="https://www.manscaped.com/products/the-scalp-buffer">Sjampónuddari?</a></li>
+              <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush">Hársvarðarbursti</a></li>
             </div>
             <div class="card">
               <p>Svosem</p>
