--- a/pages/practical.html
+++ b/pages/practical.html
@@ -42,6 +42,11 @@
               <li><a href="https://www.amazon.com/dp/B094YDJPX9/?coliid=I2TX8R7MGQNJNP&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Grip trainer</a></li>
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
             </div>
+            <div class="card">
+              <p>Bíómiðar</p>
+              <li><a href="https://www.sambio.is/Vouchers">Sambíómiðar</a></li>
+              <li><a href="https://www.heimkaup.is/biomidi">Smárabíómiðar</a></li>
+            </div>
           </div>
         </ul>
       </div>
