Fann íslenska síðu fyrir handgrip

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -39,7 +39,7 @@
             </div>
             <div class="card">
               <p>Svosem</p>
-              <li><a href="https://www.amazon.com/dp/B094YDJPX9/?coliid=I2TX8R7MGQNJNP&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Grip trainer</a></li>
+              <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li>
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
             </div>
             <div class="card">
