Fékk handgrip í afmælisgjöf frá mömmu og Gulla

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -39,7 +39,8 @@
             </div>
             <div class="card">
               <p>Svosem</p>
-              <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li>
+              <!-- Fékk handgrip í afmælisgjöf -->
+              <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
             </div>
             <div class="card">
