Sigríður fann forstofumottuna sína

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -30,7 +30,7 @@
             <div class="card">
               <p>Engir</p>
               <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281">Stofumotta</a></li>
-              <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da">Skrifborð</a></li>
+              <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232">Forstofumotta</a></li>
             </div>
             <div class="card">
               <p>Undirflokkar</p>
@@ -41,6 +41,7 @@
               <p>Svosem</p>
               <!-- Fékk handgrip í afmælisgjöf -->
               <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
+              <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da">Skrifborð</a></li>
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
             </div>
             <div class="card">
