Bætti við belti í fatnadur

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -18,7 +18,7 @@
             <p>Engir hlekkir hér því miður, bara lýsingar</p>
             <li>Þunna síðerma boli, hvaða lit sem er</li>
             <li>Nærbuxur, boxer briefs(því litríkara því betra)</li>
-            <li></li>
+            <li>Leðurbelti. Venjulegt, ekkert sérstakt</li>
             <li></li>
             <li></li>
             <li></li>
