Bætti við oskaskrin og breytti bíómiðar í Gjafakort o.þ.h.

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -45,9 +45,10 @@
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
             </div>
             <div class="card">
-              <p>Bíómiðar</p>
+              <p>Gjafakort o.þ.h.</p>
               <li><a href="https://www.sambio.is/Vouchers">Sambíómiðar</a></li>
               <li><a href="https://www.heimkaup.is/biomidi">Smárabíómiðar</a></li>
+              <li><a href="https://oskaskrin.is/">Óskaskrín</a></li>
             </div>
           </div>
         </ul>
