Tók o.þ.h. úr Gjafakort listanum, það tók of mikið pláss og ýtti listanum niður

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -39,13 +39,13 @@
             </div>
             <div class="card">
               <p>Svosem</p>
-              <!-- Fékk handgrip í afmælisgjöf -->
+              <!-- Fékk handgrip í afmælisgjöf 2024 -->
               <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
               <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da">Skrifborð</a></li>
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
             </div>
             <div class="card">
-              <p>Gjafakort o.þ.h.</p>
+              <p>Gjafakort</p>
               <li><a href="https://www.sambio.is/Vouchers">Sambíómiðar</a></li>
               <li><a href="https://www.heimkaup.is/biomidi">Smárabíómiðar</a></li>
               <li><a href="https://oskaskrin.is/">Óskaskrín</a></li>
