--- a/pages/practical.html
+++ b/pages/practical.html
@@ -28,22 +28,27 @@
           <h5>Heimilis og/eða praktískt</h5>
           <div class="cards">
             <div class="card">
-              <p>Engir</p>
+              <p>IKEA/Rúmfó</p>
               <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281">Stofumotta</a></li>
               <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232">Forstofumotta</a></li>
+              <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da">Skrifborð</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963">Nestisbox</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792">Lok meððí</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174">Minna nestisbox</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789">Lok meððí</a></li>
             </div>
             <div class="card">
-              <p>Undirflokkar</p>
+              <p>Fyrir Elfar</p>
               <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT">Ný ryksuga, loksins</a></li>
               <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush">Hársvarðarbursti</a></li>
-            </div>
-            <div class="card">
-              <p>Svosem</p>
-              <!-- Fékk handgrip í afmælisgjöf 2024 -->
-              <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
-              <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da">Skrifborð</a></li>
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
             </div>
+            <!-- <div class="card">
+              <p>Skipulag</p>
+               Fékk handgrip í afmælisgjöf 2024 -->
+              <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
+              <!-- <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
+            </div> -->
             <div class="card">
               <p>Gjafakort</p>
               <li><a href="https://www.sambio.is/Vouchers">Sambíómiðar</a></li>
