--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         og það er fáanlegt útí búð þá kaupiði það að sjálfsögðu þar til að einfalda öll skref.<br>
         Einnig er ekkert möst að kaupa allt af þessum lista fyrir afmæli eða jól, ég uppfæri bara árlega í gegnum árið og árin<br>
       </p>
+    </div>
       <div class="cards">
         <nav>
           <ul>
@@ -47,7 +48,7 @@
           </ul>
         </nav>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
   </body>
 </html>
