--- a/pages/folf.html
+++ b/pages/folf.html
@@ -9,8 +9,10 @@
     <div class="backtoindex">
       <a href="../index.html">Aftur í forvara</a>
     </div>
-    <p>Laufléttur forvari fyrir folfið. Ég verð mjög glaður ef ég fæ alla þessa diska, <br>
-      en þá bráðvantar mig töskuna með þeim svo ég þurfi ekki alltaf að halda á 6 diskum</p>
+    <div class="forvari">
+      <p>Laufléttur forvari fyrir folfið. Ég verð mjög glaður ef ég fæ alla þessa diska, <br>
+        en þá bráðvantar mig töskuna með þeim svo ég þurfi ekki alltaf að halda á 6 diskum</p>
+    </div>
     <div class="cards">
       <nav>
         <div class="navcard">
