index loksins centered

--- a/index.html
+++ b/index.html
@@ -16,36 +16,40 @@
         og það er fáanlegt útí búð þá kaupiði það að sjálfsögðu þar til að einfalda öll skref.<br>
         Einnig er ekkert möst að kaupa allt af þessum lista fyrir afmæli eða jól, ég uppfæri bara árlega í gegnum árið og árin<br>
       </p>
-      <div class="cards">
-        <nav>
-          <ul>
-            <li>
-              <div class="navcard">
-                <a href="/pages/fatnadur.html">Föt</a>
-              </div>
-            </li>
-          <li>
-            <div class="navcard">
-              <a href="/pages/folf.html">Folf</a>
-            </div>
-          </li>
-          <li>
-            <div class="navcard">
-              <a href="/pages/gamesbooks.html">Leikir og bækur</a>
-            </div>
-          </li>
-          <li>
-            <div class="navcard">
-              <a href="/pages/practical.html">Praktískt heima</a>
-            </div>
-          </li>
-          <li>
-            <div class="navcard">
-              <a href="/pages/stickers.html">Límmiðar</a>
-            </div>
-          </li>
-          </ul>
-        </nav>
+      <div class="card-container">
+        <div class="centered-list">
+          <div class="cards">
+            <nav>
+              <ul>
+                <li>
+                  <div class="navcard">
+                    <a href="/pages/fatnadur.html">Föt</a>
+                  </div>
+                </li>
+              <li>
+                <div class="navcard">
+                  <a href="/pages/folf.html">Folf</a>
+                </div>
+              </li>
+              <li>
+                <div class="navcard">
+                  <a href="/pages/gamesbooks.html">Leikir og bækur</a>
+                </div>
+              </li>
+              <li>
+                <div class="navcard">
+                  <a href="/pages/practical.html">Praktískt heima</a>
+                </div>
+              </li>
+              <li>
+                <div class="navcard">
+                  <a href="/pages/stickers.html">Límmiðar</a>
+                </div>
+              </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
     </div>
   </div>
