Breytti title úr Elf í Elfars. Er einnig að testa að færa þetta almennilega loksins í skjátölvuna

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="gjafalisti.css">
-    <title>Gjafalisti Elf</title>
+    <title>Gjafalisti Elfars</title>
   </head>
   <body>
     <div class="wrapper">
