--- a/pages/practical.html
+++ b/pages/practical.html
@@ -36,6 +36,8 @@
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792">Lok meððí</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174">Minna nestisbox</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789">Lok meððí</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807">Stórt matarbox</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063">Lok meððí</a></li>
             </div>
             <div class="card">
               <p>Fyrir Elfar</p>
