Bætti við í borðspil, loksins

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -38,9 +38,9 @@
             </div>
             <div class="card">
               <p>Borðspil</p>
-              <li><a href=""> </a></li>
-              <li><a href=""> </a></li>
-              <li><a href=""> </a></li>
+              <li><a href="https://nexus.is/vara/pobbkviss-4/">Pöbbkviss 4</a></li>
+              <li><a href="https://nexus.is/vara/ticket-to-ride-usa/">Ticket to Ride</a></li>
+              <li><a href="https://nexus.is/vara/marvel-united/">Marvel United</a></li>
             </div>
           </div>
         </ul>
