Færði BD-1 í sinn eigin Lego lista

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -33,7 +33,6 @@
             <div class="card">
               <p>Bækur</p>
               <li><a href="https://www.amazon.com/Have-No-Mouth-Must-Scream/dp/1497643074#customerReviews">7 bækur í einu</a></li>
-              <li><a href="https://www.amazon.com/dp/B09X1XXSS2/?coliid=I27VOBDQQ6KT4P&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Lego BD-1</a></li>
               <li><a href="https://www.amazon.com/Returnal-Fallen-Asteria-Gregory-Louden/dp/1506742378">Góð bók</a></li>
             </div>
             <div class="card">
@@ -41,6 +40,13 @@
               <li><a href="https://nexus.is/vara/pobbkviss-4/">Pöbbkviss 4</a></li>
               <li><a href="https://nexus.is/vara/ticket-to-ride-usa/">Ticket to Ride</a></li>
               <li><a href="https://nexus.is/vara/marvel-united/">Marvel United</a></li>
+            </div>
+            <div class="card">
+              <p>Lego</p>
+              <li><a href="https://www.amazon.com/dp/B09X1XXSS2/?coliid=I27VOBDQQ6KT4P&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Lego BD-1</a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
             </div>
           </div>
         </ul>
