Breytti Lego BD-1 í bara BD-1 þar sem hann er undir Lego listanum

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -43,7 +43,7 @@
             </div>
             <div class="card">
               <p>Lego</p>
-              <li><a href="https://www.amazon.com/dp/B09X1XXSS2/?coliid=I27VOBDQQ6KT4P&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">Lego BD-1</a></li>
+              <li><a href="https://www.amazon.com/dp/B09X1XXSS2/?coliid=I27VOBDQQ6KT4P&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1">BD-1</a></li>
               <li><a href=""></a></li>
               <li><a href=""></a></li>
               <li><a href=""></a></li>
