Fékk nokkra stickers frá Sísí Lind

--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -35,14 +35,17 @@
         <div class="cards">
           <div class="card">
             <p>Nerd culture</p>
-            <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li>
+            <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
+            <!-- <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5">Astra</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5">FBC </a></li>
           </div>
           <div class="card">
             <p>Pop culture</p>
-            <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li>
+            <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
+            <!-- <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li> -->
+            <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
+            <!-- <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs </a></li>
           </div>
         </ul>
