Bætti við nefhárasnyrti og fiktaði með <br>

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -28,7 +28,7 @@
               <p>Leikja</p>
               <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI">Final Fantasy I-VI</a></li>
               <li><a href="https://elko.is/vorur/steam-deck-oled-1-tb-leikjatolva-344000/STEAMDECKOLED1000">Steam Deck OLED 1TB</a></li>
-              <li><a href="https://elko.is/vorur/nintendo-pro-thradlaus-styripinni-svartur-82422/SWIPROWLCONTR">Nintendo Switch fjarstýring</a></li>
+              <li><a href="https://elko.is/vorur/nintendo-pro-thradlaus-styripinni-svartur-82422/SWIPROWLCONTR">Nintendo Switch<br>fjarstýring</a></li>
             </div>
             <div class="card">
               <p>Bækur</p>
