--- a/pages/practical.html
+++ b/pages/practical.html
@@ -44,6 +44,7 @@
               <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT">Ný ryksuga, loksins</a></li>
               <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush">Hársvarðarbursti</a></li>
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
+              <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850">Eyrna- og nef<br>hárasnyrtir</a></li>
             </div>
             <!-- <div class="card">
               <p>Skipulag</p>
