Bjó til meme sticker lista

--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -48,6 +48,10 @@
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs </a></li>
           </div>
+          <div class="card">
+            <p>Memes</p>
+            <li><a href="https://www.redbubble.com/i/sticker/Highly-caffeinated-Magnet-by-KelseyPatel/114759697.EJUG5">Koffínkisi</a></li>
+          </div>
         </ul>
       </div>
     </div>
